fix overflow regression on vsplit layout (added by 98cd5c61c7da4e352f1c541cadc7a2274794f652)

--- a/css/styles.css
+++ b/css/styles.css
@@ -632,7 +632,7 @@ input.save {
       height: inherit !important;
    }
 
-   .layout_vsplit > .page > .ui-tabs > .ui-tabs-panel {
+   .layout_vsplit > #page > .ui-tabs > .ui-tabs-panel {
       padding: 10px 0 0 0;
       overflow-x: hidden;
       overflow-y: auto;
